--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <header class="intro">
 
-      <img src="/Users/stephentanksley/User-Interface/Sprint-Challenge--Advanced-CSS/img/main-header.png" alt="Image of the curvature of the earth from space."/>
+      <img class="header-img" src="/Users/stephentanksley/User-Interface/Sprint-Challenge--Advanced-CSS/img/main-header.png" alt="Image of the curvature of the earth from space."/>
 
       <!-- image code here -->
 
