--- a/index.html
+++ b/index.html
@@ -20,81 +20,87 @@
 <body>
 
   <!-- navigation code here -->
+  <div class="site-container">
+    <div class="header-bar">
 
-  <div class="header-bar">
-
-    <div class="header-text">
-      <h1>Space Walkers</h1>
-    </div>
-
-    <div>
-      <nav class="header-nav">
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-        <a href="#">Sign-In</a>
-      </nav>
-    </div>
-
-
-  </div>
-  <div class="container home">
-
-    <header class="intro">
-
-      <img class="header-img" src="/Users/stephentanksley/User-Interface/Sprint-Challenge--Advanced-CSS/img/main-header.png" alt="Image of the curvature of the earth from space."/>
-
-      <!-- image code here -->
-
-      <h2>Lift Off</h2>
-
-      <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
-        marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate,
-        that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
-    </header>
-
-    <section class="space-images">
-      <img src="img/blast.png" class="blast" alt="Rocket blasting off">
-      <img src="img/sky.png" class="sky" alt="Space sky image">
-      <img src="img/launch.png" class="launch" alt="Launching rocket">
-    </section>
-
-    <section class="visit-planets">
-
-      <h3>Can We Visit Planets?</h3>
-
-      <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe,
-        having the qualities of a globe, a round earth in which all the directions eventually meet.</p>
-
-      <p>Which there is no center because every point, or none, is center — an equal earth which all men occupy as
-        equals. The airman's earth, if free men make it.</p>
-    </section>
-
-    <section class="walk">
-      <div class="walk-text">
-        <h3>Let's Go For A Walk</h3>
-
-        <p>The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic.
-          The Earth was absolutely round.</p>
-
-        <p>Suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye,
-          and my thumb blotted out the planet Earth.</p>
-
-        <button class="btn">
-          Sign Up
-        </button>
+      <div class="header-text">
+        <h1>Space Walkers</h1>
       </div>
 
-      <div class="walk-img">
-        <img src="img/space-walk.png" alt="Space walking astronaut">
+      <div>
+        <nav class="header-nav">
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+          <a href="#">Sign-In</a>
+        </nav>
       </div>
 
-    </section>
 
-    <footer>
-      <p>Copyright SpaceWalkers 2018</p>
-    </footer>
+    </div>
+    <div class="container home">
+
+      <header class="intro">
+
+        <img class="header-img"
+          src="/Users/stephentanksley/User-Interface/Sprint-Challenge--Advanced-CSS/img/main-header.png"
+          alt="Image of the curvature of the earth from space." />
+
+        <!-- image code here -->
+
+        <h2>Lift Off</h2>
+
+        <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
+          marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
+          delicate,
+          that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
+      </header>
+
+      <section class="space-images">
+        <img src="img/blast.png" class="blast" alt="Rocket blasting off">
+        <img src="img/sky.png" class="sky" alt="Space sky image">
+        <img src="img/launch.png" class="launch" alt="Launching rocket">
+      </section>
+
+      <section class="visit-planets">
+
+        <h3>Can We Visit Planets?</h3>
+
+        <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a
+          globe,
+          having the qualities of a globe, a round earth in which all the directions eventually meet.</p>
+
+        <p>Which there is no center because every point, or none, is center — an equal earth which all men occupy as
+          equals. The airman's earth, if free men make it.</p>
+      </section>
+
+      <section class="walk">
+        <div class="walk-text">
+          <h3>Let's Go For A Walk</h3>
+
+          <p>The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic.
+            The Earth was absolutely round.</p>
+
+          <p>Suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye,
+            and my thumb blotted out the planet Earth.</p>
+
+          <button class="btn">
+            Sign Up
+          </button>
+        </div>
+
+        <div class="walk-img">
+          <img src="img/space-walk.png" alt="Space walking astronaut">
+        </div>
+
+      </section>
+
+      <footer>
+        <p>Copyright SpaceWalkers 2018</p>
+      </footer>
+
+    </div>
 
   </div>
 </body>
