Found an errant bit of styling on the mobile site. Fixed it to make the padding more uniform between sections when in the mobile media query.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
           src="/Users/stephentanksley/User-Interface/Sprint-Challenge--Advanced-CSS/img/main-header.png"
           alt="Image of the curvature of the earth from space." />
 
+          <!-- <img class="header-img"
+          src="/Users/stephentanksley/User-Interface/Sprint-Challenge--Advanced-CSS/img/main-header.png"
+          alt="Image of the curvature of the earth from space." />-->
+
         <!-- image code here -->
 
         <h2>Lift Off</h2>
