--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <header class="intro">
 
         <img class="header-img"
-          src="/Users/stephentanksley/User-Interface/Sprint-Challenge--Advanced-CSS/img/main-header.png"
+          src="img/main-header.png"
           alt="Image of the curvature of the earth from space." />
 
           <!-- <img class="header-img"
